# lala

./: LICENSE  README.md
front-end/vue/: package-lock.json  package.json
front-end/vue/src/: App.vue  main.js
front-end/vue/src/assets/: swagger-spec.json  swagger-spec.yaml  swagger-ui.css
front-end/vue/src/components/: AlarmButton.vue  AlarmCountLabel.vue  ClientStatusLabel.vue  Navigation.vue  ServerStatusLabel.vue  Swagger.vue
front-end/vue/src/router/: index.js
front-end/vue/src/store/: store.js
front-end/vue/src/util/: history.js
front-end/vue/src/views/: API.vue  Alarms.vue  History.vue  Home.vue
server/: Cargo.toml
server/src/: cors.rs  data_structures.rs  lib.rs  main.rs  models.rs  state.rs
