[package]
name = "alarm-server"
description = "The alarm server executable for Lala"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/simbleau/lala"

[dependencies]
ringbuffer = "0.8.2"
serde = "1.0.130"
serde_json = "1.0"
rocket = {version = "0.5.0-rc.1"}
rocket-client-addr = "0.5.0"
chrono = "0.4.19"